testsuite/tests/typecheck/should_fail/T14904a.stderr

T14904a.hs:9:6: error:
    • Expected kind ‘forall (a :: k0). g a’, but ‘f’ has kind ‘k1’
      Cannot instantiate unification variable ‘k1’
      with a kind involving polytypes: forall (a :: k0). g a
    • In the first argument of ‘F’, namely ‘(f :: forall a. g a)’
      In the type family declaration for ‘F’
